Added api, shared project scaffolding

--- a/Portfolio-Razor/Pages/_ViewImports.cshtml
+++ b/Portfolio-Razor/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Portfolio_Razor
-@namespace Portfolio_Razor.Pages
+﻿@using PortfolioRazor
+@namespace PortfolioRazor.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
